--- a/app/assets/stylesheets/redesign/components/_media.scss
+++ b/app/assets/stylesheets/redesign/components/_media.scss
@@ -2,6 +2,7 @@
 -------------------------------------------------------*/
 .media-wrap {
   position: relative;
+  display: block;
   width: 100%;
   height: auto;
   overflow: hidden;
