--- a/engines/admin_ui/app/views/admin_ui/preferences/index.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/preferences/index.html.slim
@@ -77,15 +77,7 @@
                 | Shopping Bag
               .form-group
                 label
-                  | Free Styling
-                = text_field :preferences, shopping_bag.free_styling_key, value: shopping_bag.free_styling, class: 'form-control'
-              .form-group
-                label
-                  | Free Delivery
-                = text_field :preferences, shopping_bag.free_delivery_key, value: shopping_bag.free_delivery, class: 'form-control'
-              .form-group
-                label
-                  | Customer Service
-                = text_field :preferences, shopping_bag.customer_service_key, value: shopping_bag.customer_service, class: 'form-control'
+                  | Value Proposition Text
+                = text_field :preferences, shopping_bag.value_proposition_key, value: shopping_bag.value_proposition, class: 'form-control'
 
             button.btn.btn-primary type="submit" Save changes
