--- a/app/views/shared/redesign/_tabs_collection.html.slim
+++ b/app/views/shared/redesign/_tabs_collection.html.slim
@@ -9,7 +9,7 @@
       a href='#collection3' data-toggle="tab" Here comes the Sun Collection
 
   .tab-wrap
-    = link_to '/', id: 'collection1', class: 'tab active'
+    = link_to '/lookbook/make-a-statement', id: 'collection1', class: 'tab active'
       = image_tag 'home-page-tiles/tab-collectionbox-1.jpg', alt: 'Make a Statement Collection'
     = link_to '/lookbook/the-luxe-collection', id: 'collection2', class: 'tab'
       = image_tag 'home-page-tiles/tab-collectionbox-2.jpg', alt: 'Luxe Collection'
