--- a/app/views/shared/redesign/_blog_posts.html.slim
+++ b/app/views/shared/redesign/_blog_posts.html.slim
@@ -18,55 +18,63 @@
 
   .posts
     .col
-      a.post href='javascript:;'
+      a.post href='http://blog.fameandpartners.com/jessica-schiffer-fashion-features-editor-whowhatwear-nyc/'
         .media-wrap.is-loaded
-          = image_tag '_demo/blog-post.jpg', alt: 'Something here'
+          .inner-wrap
+            = image_tag 'homepage/blog/blog-1.jpg', alt: 'Blog image'
         .content-wrap
-          h5.title.txt-truncate-1 Lorem ipsum dolor sit amet, consectetur adipiscing elit
-          p.txt-truncate-block Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing
-      a.post.compact href='javascript:;'
+          h5.title.txt-truncate-1 Jessica Schiffer, Fashion Features Editor, Who What Wear
+          p.txt-truncate-block We chat style with the NY fashionista
+      a.post.compact href='http://blog.fameandpartners.com/ff-_fjura'
         .media-wrap.is-loaded
-          = image_tag '_demo/blog-post.jpg', alt: 'Something here'
+          .inner-wrap
+            = image_tag 'homepage/blog/blog-5.jpg', alt: 'Blog image'
         .content-wrap
-          h5.title.txt-truncate-1 Lorem ipsum dolor sit amet, consectetur adipiscing elit
-          p.txt-truncate-block Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing
-      a.post href='javascript:;'
+          h5.title.txt-truncate-1 Follow Friday @flura_
+          p.txt-truncate-block We're obsessed with this florist's Instagram feed
+      a.post href='http://blog.fameandpartners.com/at-first-blush'
         .media-wrap.is-loaded
-          = image_tag '_demo/blog-post.jpg', alt: 'Something here'
+          .inner-wrap
+            = image_tag 'homepage/blog/blog-2.jpg', alt: 'Blog image'
         .content-wrap
-          h5.title.txt-truncate-1 Lorem ipsum dolor sit amet, consectetur adipiscing elit
-          p.txt-truncate-block Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing
-      a.post href='javascript:;'
+          h5.title.txt-truncate-1 First Blush
+          p.txt-truncate-block Fashion's new favourite shade
+      a.post href='http://blog.fameandpartners.com/tbt-lauren-hutton-1975'
         .media-wrap.is-loaded
-          = image_tag '_demo/blog-post.jpg', alt: 'Something here'
+          .inner-wrap
+            = image_tag 'homepage/blog/blog-3.jpg', alt: 'Blog image'
         .content-wrap
-          h5.title.txt-truncate-1 Lorem ipsum dolor sit amet, consectetur adipiscing elit
-          p.txt-truncate-block Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing
+          h5.title.txt-truncate-1 #TBT Lauren Hutton, 1975
+          p.txt-truncate-block This weeks old school style muse
 
     .col
-      a.post href='javascript:;'
+      a.post href='http://blog.fameandpartners.com/bambis-guide-to-black-tie-beauty'
         .media-wrap.is-loaded
-          = image_tag '_demo/blog-post.jpg', alt: 'Something here'
+          .inner-wrap
+            = image_tag 'homepage/blog/blog-4.jpg', alt: 'Blog image'
         .content-wrap
-          h5.title.txt-truncate-1 Lorem ipsum dolor sit amet, consectetur adipiscing elit
-          p.txt-truncate-block Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing
-      a.post href='javascript:;'
+          h5.title.txt-truncate-1 Bambi's Guide to Black Tie
+          p.txt-truncate-block Our campaign star spills on how she does formal chic
+      a.post href='http://blog.fameandpartners.com/the-secret-to-styling-an-mbd-maxi-black-dress'
         .media-wrap.is-loaded
-          = image_tag '_demo/blog-post.jpg', alt: 'Something here'
+          .inner-wrap
+            = image_tag 'homepage/blog/blog-7.jpg', alt: 'Blog image'
         .content-wrap
-          h5.title.txt-truncate-1 Lorem ipsum dolor sit amet, consectetur adipiscing elit
-          p.txt-truncate-block Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing
-      a.post.compact href='javascript:;'
+          h5.title.txt-truncate-1 The Secret To Styling An MBD
+          p.txt-truncate-block That’s a Maxi Black Dress, people
+      a.post.compact href='http://blog.fameandpartners.com/dannielle-cartisano-market-editor-elle-australia'
         .media-wrap.is-loaded
-          = image_tag '_demo/blog-post.jpg', alt: 'Something here'
+          .inner-wrap
+            = image_tag 'homepage/blog/blog-6.jpg', alt: 'Blog image'
         .content-wrap
-          h5.title.txt-truncate-1 Lorem ipsum dolor sit amet, consectetur adipiscing elit
-          p.txt-truncate-block Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing
-      a.post href='javascript:;'
+          h5.title.txt-truncate-1 Dannielle Cartisano, Market Editor, ELLE Australia
+          p.txt-truncate-block It's her job to know what you want before you do.
+      a.post href='http://blog.fameandpartners.com/5-on-trend-dresses-youll-need-for-the-wedding-season'
         .media-wrap.is-loaded
-          = image_tag '_demo/blog-post.jpg', alt: 'Something here'
+          .inner-wrap
+            = image_tag 'homepage/blog/blog-8.jpg', alt: 'Blog image'
         .content-wrap
-          h5.title.txt-truncate-1 Lorem ipsum dolor sit amet, consectetur adipiscing elit
-          p.txt-truncate-block Lorem ipsum dolor sit amet, consectetur adipiscing elit consectetur adipiscing
+          h5.title.txt-truncate-1 5 On-Trend Dresses You'll Need For The Wedding Season Ahead
+          p.txt-truncate-block Because sometimes it's okay to outshine the bride
 
-  input.btn.btn-block.btn-black.btn-md type= 'submit' value='VIEW MORE...'
+  a.btn.btn-block.btn-black.btn-md href='http://blog.fameandpartners.com' VIEW MORE...
