--- a/engines/admin_ui/app/views/admin_ui/preferences/index.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/preferences/index.html.slim
@@ -79,5 +79,7 @@
                 label
                   | Value Proposition Text
                 = text_field :preferences, shopping_bag.value_proposition_key, value: shopping_bag.value_proposition, class: 'form-control'
+                .help-block.m-b-none
+                  | Value proposition text that will be shown on shopping bag, right under the payment button.
 
             button.btn.btn-primary type="submit" Save changes
