implement price_amount method on products presenter

--- a/app/views/products/details/_micro_data.html.slim
+++ b/app/views/products/details/_micro_data.html.slim
@@ -7,6 +7,6 @@ div itemscope="" itemtype="http://schema.org/Product"
   div itemprop="offers" itemscope='' itemtype="http://schema.org/Offer"
     meta itemprop="itemCondition" itemtype="http://schema.org/OfferItemCondition" content="http://schema.org/NewCondition"
     meta itemprop="availability" href="http://schema.org/InStock"
-    meta itemprop="price" content=@product.price.amount
+    meta itemprop="price" content=@product.price_amount
     meta itemprop="priceCurrency" content=@product.price.currency
     meta itemprop="sku" content="sku:#{@product.sku}"
