--- a/app/views/shared/redesign/_seo_content.html.slim
+++ b/app/views/shared/redesign/_seo_content.html.slim
@@ -1,5 +1,5 @@
 section.container.content-block.seo-content
-  h2.title Formal dresses for every event
+  h1.title Formal dresses for every event
   .row
     .col-md-4.col-sm-6.col-xs-12
       .inner-wrap
@@ -23,7 +23,7 @@ section.container.content-block.seo-content
         p We deliver you beautiful dresses, customised for you, at the prices we do because we keep it all online.
     .col-md-4.col-sm-6.col-xs-12
       .inner-wrap
-        h4.sub-title FORMAL DRESSES FOR EVERY EVENT
+        h4.sub-title PERFECT FOR ANY SPECIAL OCCASION
         ul
           li
             = link_to 'grad dresses', build_taxon_path('Graduation')
