--- a/app/assets/stylesheets/redesign/_layout.css.scss
+++ b/app/assets/stylesheets/redesign/_layout.css.scss
@@ -4,12 +4,12 @@ body {
 
 /////////// content container //////////
 
-#content-container {
+.sticky-header #content-container {
   margin-top: $mega-menu-desktop-height;
 }
 
 @media (max-width: 992px) {
-  #content-container {
+  .sticky-header #content-container {
     margin-top: $mega-menu-mobile-height;
   }
 }
