--- a/app/assets/stylesheets/redesign/components/_blog-posts.scss
+++ b/app/assets/stylesheets/redesign/components/_blog-posts.scss
@@ -139,7 +139,7 @@
     font-size: 0.875em;
     font-style: italic;
     font-weight: 400;
-    line-height: normal;
+    line-height: 1.3;
   }
 
   // START - desktop
