--- a/app/assets/stylesheets/redesign/stylesheets/styles.css
+++ b/app/assets/stylesheets/redesign/stylesheets/styles.css
@@ -8034,34 +8034,34 @@ xheader
   float: left;
   margin-top: 5px;
 }
-#cart .shopping-bag-text i:nth-child(1){
+#cart .shopping-bag-text i.coathanger{
   background-image: url('../../cart/coathanger.svg');
   width: 20px;
   height: 15px;
   margin-top: 2px;
-  margin-right: 5px;
+  margin-right: 10px;
   display: block;
   float: left;
   background-size: contain;
   clear: both;
 }
-#cart .shopping-bag-text i:nth-child(3){
+#cart .shopping-bag-text i.plane{
   background-image: url('../../cart/plane.svg');
   width: 20px;
   height: 21px;
   margin-top: 3px;
-  margin-right: 5px;
+  margin-right: 10px;
   display: block;
   float: left;
   background-size: contain;
   clear: both;
 }
-#cart .shopping-bag-text i:nth-child(5){
+#cart .shopping-bag-text i.mobile{
   background-image: url('../../cart/mobile.svg');
   width: 22px;
   height: 19px;
   margin-top: 5px;
-  margin-right: 3px;
+  margin-right: 8px;
   margin-left: 1px;
   display: block;
   float: left;
