--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -56,9 +56,10 @@ ruby:
   span.lookbook LOOKBOOK
   span.magazine
     a href='http://fameandpartners.tumblr.com/' MAGAZINE
-  span.sale SALE
-  span.made-for-you MADE FOR YOU
-  span.join-us JOIN US
+  span.sale
+    = link_to 'SALE', '/mystyle?lpi=formal&sale='
+  /span.made-for-you MADE FOR YOU
+  /span.join-us JOIN US
   span.search-wrapper#search
     a.icon-search.js-search-trigger href="#"
       = image_tag "_icons/search.svg", class: "nav-mobile-logo"
