--- a/app/views/layouts/redesign/_footer.html.slim
+++ b/app/views/layouts/redesign/_footer.html.slim
@@ -5,9 +5,9 @@
       .stay-social-images
         = render 'layouts/redesign/social_links'
 
-      .register-email
-        = text_field_tag 'email', nil, placeholder: 'REGISTER YOUR EMAIL FOR THIS XX OFFER'
-      .submit SUBMIT
+      /.register-email
+      /  = text_field_tag 'email', nil, placeholder: 'REGISTER YOUR EMAIL FOR THIS XX OFFER'
+      /.submit SUBMIT
   .row.buttons.hidden-xs.hidden-sm
     .col
       = image_tag 'footer/refer.png'
