updated footer and register copy

--- a/app/views/layouts/redesign/_footer.html.slim
+++ b/app/views/layouts/redesign/_footer.html.slim
@@ -11,7 +11,7 @@
   .row.buttons.hidden-xs.hidden-sm
     .col
       = image_tag 'footer/refer.png'
-      .text REFER A FRIEND
+      .text FREE STYLING SESSION
     .col
       = image_tag 'footer/48.png'
       .text 48 HR EXPRESS MAKING
@@ -25,7 +25,7 @@
     .row.buttons.visible-xs.visible-sm
       .col-xs-12
         = image_tag 'footer/refer.png', class: 'refer'
-        .text REFER A FRIEND
+        .text FREE STYLING SESSION
       .col-xs-12
         = image_tag 'footer/48.png', class: 'hr48'
         .text 48 HR EXPRESS MAKING
@@ -33,11 +33,11 @@
         = image_tag 'footer/chain.png', class: 'chain'
         .text JOIN THE FAME CHAIN
 
-    .row.email-row
-      .col-xs-12.col-sm-12
-        .input-group
-          input type="text" class="form-control email" placeholder="REGISTER YOUR EMAIL FOR THIS XX OFFER" aria-describedby="basic-addon2"
-          span.input-group-addon#basic-addon2 SUBMIT
+    /.row.email-row
+      /.col-xs-12.col-sm-12
+        /.input-group
+          /input type="text" class="form-control email" placeholder="REGISTER YOUR EMAIL FOR THIS XX OFFER" aria-/describedby="basic-addon2"
+          /span.input-group-addon#basic-addon2 SUBMIT
     .row
       .stay-social
         center STAY SOCIAL
