--- a/app/views/shared/redesign/_newsletter_signup.html.slim
+++ b/app/views/shared/redesign/_newsletter_signup.html.slim
@@ -14,7 +14,7 @@ section#email-container.content-block.email-subscription
         h2.title Get a taste of fame with $20 OFF your first purchase, free styling sessions & VIP treatment.
       .col-md-6
         form.input-btn action="https://fameandpartners.createsend.com/t/t/s/urikx/" method="post"
-          input#fieldEmail name="cm-urikx-urikx" type="email" placeholder="Register your email for this xx offer" /
+          input#fieldEmail name="cm-urikx-urikx" type="email" placeholder="Register your email for this $20 offer" /
           input type="hidden" id="fieldName"    name="cm-name" value=(current_spree_user.try(:full_name))
           input type="hidden" id="fielddkjudk"  name="cm-f-dkjudk" value=(details[:country])
           input type="hidden" id="fielddkjuhy"  name="cm-f-dkjuhy" value=(details[:promocode])
