--- a/app/views/index/show.html.slim
+++ b/app/views/index/show.html.slim
@@ -7,10 +7,10 @@
 section.container.content-block.home-main-content
   .row
     .main.col-md-7
-      = link_to '/dresses/lace', class: 'media-wrap'
+      = link_to '/dresses?style%5B%5D=Lace', class: 'media-wrap'
         = image_tag 'home-page-tiles/tile-amazing-lace.jpg', alt: 'AMAZING LACE - Shop our lace dress edit'
       = render 'shared/redesign/tabs_collection'
-      = link_to '/dresses/two-piece', class: 'media-wrap'
+      = link_to '/dresses?style%5B%5D=Two+Piece', class: 'media-wrap'
         = image_tag 'home-page-tiles/tile-double-or-nothing.jpg', alt: 'DOUBLE OR NOTHING - Discover our best two-piece styles'
       = link_to '/getitquick', class: 'media-wrap'
         = image_tag 'home-page-tiles/tile-express-making.png', alt: 'Express making - Dresses made in 48 hours.'
