--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -255,7 +255,7 @@ ruby:
             .arrow
               i.fa.fa-chevron-right
           li.normal-item
-            a.text href='http://fameandpartners.tumblr.com/' MAGAZINE
+            a.text href='http://blog.fameandpartners.com' MAGAZINE
           li.normal-item
             = link_to 'SALE', '/mystyle?lpi=formal&sale=', class: 'text'
           /li.normal-item
