--- a/app/views/layouts/redesign/_notices.html.slim
+++ b/app/views/layouts/redesign/_notices.html.slim
@@ -1,6 +1,6 @@
 .sitewide
   - if sale_active?
-    #sale-banner.alert-sale.alert-relative role="alert"
+    #sale-banner.alert-sale role="alert"
       span.medium.banner-title
         .center-block
           span = current_sale.sitewide_message
