--- a/app/views/layouts/redesign/campaigns/_auto_apply_promo_code.html.slim
+++ b/app/views/layouts/redesign/campaigns/_auto_apply_promo_code.html.slim
@@ -43,7 +43,7 @@
     = raw enable_countdown_banner
     / = raw enable_countdown_banner_sale
 
-#countdown-banner.alert-sale.alert-relative.hidden role="alert"
+#countdown-banner.alert-sale.hidden role="alert"
   a.close href="#"
   span.medium.banner-title
   span.spacer
