--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -55,7 +55,7 @@ ruby:
 
   span.lookbook LOOKBOOK
   span.magazine
-    a href='http://fameandpartners.tumblr.com/' MAGAZINE
+    a href='http://blog.fameandpartners.com' MAGAZINE
   span.sale
     = link_to 'SALE', '/mystyle?lpi=formal&sale='
   /span.made-for-you MADE FOR YOU
