--- a/app/views/layouts/redesign/_footer.html.slim
+++ b/app/views/layouts/redesign/_footer.html.slim
@@ -9,27 +9,25 @@
       /  = text_field_tag 'email', nil, placeholder: 'REGISTER YOUR EMAIL FOR THIS XX OFFER'
       /.submit SUBMIT
   .row.buttons.hidden-xs.hidden-sm
-    .col
+    a.col href="/style-consultation"
       = image_tag 'footer/refer.png'
       .text FREE STYLING SESSION
-    .col
+    a.col href="/getitquick"
       = image_tag 'footer/48.png'
       .text 48 HR EXPRESS MAKING
-    .col
+    a.col href="/fame-chain"
       = image_tag 'footer/chain.png'
-      .text JOIN
-      br
-      .text THE FAME CHAIN
+      .text JOIN THE FAME CHAIN
 
   .mobile-footer.hidden-md.hidden-lg
     .row.buttons.visible-xs.visible-sm
-      .col-xs-12
+      a.col-xs-12 href="/style-consultation"
         = image_tag 'footer/refer.png', class: 'refer'
         .text FREE STYLING SESSION
-      .col-xs-12
+      a.col-xs-12 href="/getitquick"
         = image_tag 'footer/48.png', class: 'hr48'
         .text 48 HR EXPRESS MAKING
-      .col-xs-12
+      a.col-xs-12 href="/fame-chain"
         = image_tag 'footer/chain.png', class: 'chain'
         .text JOIN THE FAME CHAIN
 
