--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -202,10 +202,13 @@ ruby:
                 .back BACK
             li.images-content
               .row
-                = image_tag 'mobile-sidebar/lookbook/1.png'
-                = image_tag 'mobile-sidebar/lookbook/2.png'
+                a href='/lookbook/make-a-statement'
+                  = image_tag 'mobile-sidebar/lookbook/1.png'
+                a href='/lookbook/the-luxe-collection'
+                  = image_tag 'mobile-sidebar/lookbook/2.png'
               .row
-                = image_tag 'mobile-sidebar/lookbook/3.png'
+                a href='/lookbook/here-comes-the-sun'
+                  = image_tag 'mobile-sidebar/lookbook/3.png'
 
         div#magazine-menu
           ul.nav.navbar-nav
