--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -105,33 +105,33 @@ ruby:
   .lookbook-container
     ul.lookbook-slide
       li
-        .lookbook-item
+        a.lookbook-item href="/lookbook/make-a-statement"
           .head
             .text BAMBI X FAME.
           .image
             = image_tag "homepage/lookbook/1.jpg"
-        .lookbook-item
+        a.lookbook-item href="/lookbook/the-luxe-collection"
           .head
             .text LUXE COLLECTION
           .image
             = image_tag "homepage/lookbook/2.jpg"
-        .lookbook-item
+        a.lookbook-item href="/lookbook/here-comes-the-sun"
           .head
             .text HERE COMES THE SUN
           .image
             = image_tag "homepage/lookbook/3.jpg"
       li
-        .lookbook-item
+        a.lookbook-item href="/lookbook/here-comes-the-sun"
           .head
             .text HERE COMES THE SUN
           .image
             = image_tag "homepage/lookbook/3.jpg"
-        .lookbook-item
+        a.lookbook-item href="/lookbook/the-luxe-collection"
           .head
             .text LUXE COLLECTION
           .image
             = image_tag "homepage/lookbook/2.jpg"
-        .lookbook-item
+        a.lookbook-item href="/lookbook/make-a-statement"
           .head
             .text BAMBI X FAME.
           .image
