--- a/app/views/layouts/redesign/_shopping_bag.html.slim
+++ b/app/views/layouts/redesign/_shopping_bag.html.slim
@@ -9,7 +9,7 @@ ruby:
       toggle_link:  '.js-header-toolbar .js-trigger-shopping-bag',
       auto_open:    /open_cart=true/.test(window.location.search),
       country_code: '#{session[:country_code]}',
-      value_proposition: '#{shopping_bag_texts.value_proposition}'"
+      value_proposition: \"#{shopping_bag_texts.value_proposition}\""
   if masterpass_available?
       shopping_bag_init = shopping_bag_init + ",
         masterpass_link: '#buyWithMasterPass',
