lookboog image update

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -203,7 +203,7 @@ ruby:
             li.images-content
               .row
                 a href='/lookbook/make-a-statement'
-                  = image_tag 'mobile-sidebar/lookbook/1.png'
+                  = image_tag 'mobile-sidebar/lookbook/1.jpg'
                 a href='/lookbook/the-luxe-collection'
                   = image_tag 'mobile-sidebar/lookbook/2.png'
               .row
