--- a/app/assets/stylesheets/redesign/product/_product.css.scss
+++ b/app/assets/stylesheets/redesign/product/_product.css.scss
@@ -11,7 +11,8 @@
 .product-content {
 	position: absolute;
 	z-index: 50;
-	top: 23rem;
+	top: 0;
+  height: 100%;
 
 	.row {
 		padding-top: 1.45rem;
@@ -284,36 +285,14 @@
 .slides-outer-wrapper {
   position: relative;
   min-height: 600px;
-  height: 100vh;
-  padding-bottom: $mega-menu-desktop-height;
+  height: auto;
 
   @media (max-width: 992px) {
 
     & {
-      padding-bottom: $mega-menu-mobile-height;
-    }
-
-  }
-
-  @media(max-width: 768px) {
-
-    & {
       min-height: auto;
-      margin-bottom: -$mega-menu-mobile-height;
     }
 
-  }
-
-}
-
-.slides-inner-wrapper {
-  position: relative;
-  width: 100%;
-  height: 100%;
-  background: $slides-bg;
-
-  #slides {
-    height: 100% !important; // TODO: disable slider height resize
   }
 
 }
