--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -80,20 +80,20 @@ ruby:
       div.head SHOP BY
       div
         = link_to 'View all dresses', '/dresses' , class: 'no-style-text'
-      div What's new
+      div
+        = link_to "What's new", '/dresses/?order=newest', class: 'no-style-text'
       div
         = link_to 'Made in 48 hours', fast_making_dresses_path, class: 'no-style-text'
-      div Instagram
     .col2
       div.head STYLE
       = render partial: 'layouts/redesign/style'
     .col3
       div.head COLOUR
       = render partial: 'layouts/redesign/color'
-    .col4
-      div.head SEPARATES
-      div Outerwear
-  .right-area
+    /.col4
+      /div.head SEPARATES
+      /div Outerwear
+  a.right-area href="/mystyle?lpi=none&pids%5B0%5D=670-forrest-green&pids%5B1%5D=670-black&pids%5B2%5D=673-black&pids%5B3%5D=678-black&pids%5B4%5D=679-black&limit=0"
     div.girl-image
       = image_tag "homepage/dress-girl.jpg"
     div.girl-text
