--- a/app/assets/stylesheets/redesign/product/_product.css.scss
+++ b/app/assets/stylesheets/redesign/product/_product.css.scss
@@ -84,6 +84,15 @@
     display: table;
     width: 100%;
     height: 100%;
+		margin-top:100px;
+
+		@media(max-width: 990px){
+			margin-top:80px;
+		}
+
+	  @media(max-width: 768px){
+			margin-top:20px;
+	  }
   }
 
   .product-details-inner {
