Update bambi url

--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -93,7 +93,8 @@ ruby:
     /.col4
       /div.head SEPARATES
       /div Outerwear
-  a.right-area href="/mystyle?lpi=none&pids%5B0%5D=670-forrest-green&pids%5B1%5D=670-black&pids%5B2%5D=673-black&pids%5B3%5D=678-black&pids%5B4%5D=679-black&limit=0"
+  a.right-area href="/mystyle?lpi=none&pids[]=640-forrest-green&pids[]=643-black&pids[]=648-black&pids[]=656-black&pids[]=649-black&pids[]=640-black&limit=0
+"
     div.girl-image
       = image_tag "homepage/dress-girl.jpg"
     div.girl-text
