fix; force sale to 20%

--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -57,7 +57,7 @@ ruby:
   span.magazine
     a href='http://blog.fameandpartners.com' MAGAZINE
   span.sale
-    = link_to 'SALE', '/mystyle?lpi=formal&sale='
+    = link_to 'SALE', '/mystyle?lpi=formal&sale=20'
   /span.made-for-you MADE FOR YOU
   /span.join-us JOIN US
   span.search-wrapper#search
