[fix] cleanup for features specs

--- a/app/views/spree/orders/show.html.slim
+++ b/app/views/spree/orders/show.html.slim
@@ -74,9 +74,9 @@ ruby:
 
           p.support
             ' Check out our
-            =' link_to 'Support Site', 'http://support.fameandpartners.com', target: '_blank'
+            => link_to 'Support Site', 'http://support.fameandpartners.com', target: '_blank'
             ' or read our
-            =' link_to 'FAQs.', 'http://fameandpartners.com/faqs', target: '_blank'
+            => link_to 'FAQs.', 'http://fameandpartners.com/faqs', target: '_blank'
           p Or otherwise contact our friendly team if you need any help.
           p.support = link_to 'team@fameandpartners.com', 'mailto:team@fameandpartners.com'
 
