--- a/app/views/checkout/v1/spree/checkout/_masterpass_address.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_masterpass_address.html.slim
@@ -1,6 +1,5 @@
 - if Spree::Config[:address_requires_state]
   ruby:
-    states = available_states_for_current_zone
     have_states = address.country.states.present?
     # copied from instance_tag#tag_id helper method
     sanitized_object_name = form.object_name.gsub(/\]\[|[^-a-zA-Z0-9:.]/, "_").sub(/_$/, "")
@@ -8,13 +7,21 @@
     state_text_field_id = "#{ sanitized_object_name }_state_name"
     country_field_id = "#{ sanitized_object_name }_country_id"
 
+- if address_type == 'billing'
+  .row
+    .col-md-12.form-group
+      = form.label :email, with_required_mark(t(:email))
+      = form.text_field :email, class: 'required form-control form-control-md', value: form.object.email, required: 'required'
+  / Temporary location for heading.
+  h2.checkout-section-title Delivery Address Details
+
 .row
   .col-md-6.form-group
     = form.label :firstname, with_required_mark(t(:first_name))
-    = form.text_field :firstname, class: 'required form-control form-control-md', value: @masterpass_data.contact.firstName, required: 'required', readonly: true
+    = form.text_field :firstname, class: 'required form-control form-control-md', value: form.object.firstname, required: 'required', readonly: true
   .col-md-6.form-group
     = form.label :lastname, with_required_mark(t(:last_name))
-    = form.text_field :lastname, class: 'required form-control form-control-md', value: @masterpass_data.contact.lastName, required: 'required', readonly: true
+    = form.text_field :lastname, class: 'required form-control form-control-md', value: form.object.lastname, required: 'required', readonly: true
 
 .row
   .col-md-12.form-group
@@ -33,24 +40,18 @@
     = form.text_field :city, class: 'required form-control form-control-md', required: 'required', readonly: true
 
   .col-md-4.form-group class=(address.country.states_required ? '' : 'hidden')
-    = form.label :state, with_required_mark(t(:state))
-    span.states_selector_container  class=(have_states ? 'required' : 'hidden')
-      select id=(field_id) name="#{form.object_name}[state_id]" class="form-control form-control-md selectbox" disabled=(!have_states) readonly
-        option value='' data-country=''
-        - states.each do |state|
-          option selected=(address.state_id == state.id) style=(state.country_id == address.country_id ? '' : 'display: none;') value=(state.id) data-country=(state.country_id) = state.name
-
-    = form.text_field(:state_name,
-                      :class => !have_states ? 'required  form-control form-control-md' : 'hidden  form-control form-control-md',
-                      :disabled => have_states,
-                      :readonly => true)
+    = form.label :state_name, with_required_mark(t(:state))
+    = text_field_tag "#{form.object_name}[state_name]", form.object.state.name,
+                     class: 'required form-control form-control-md',
+                     required: 'required', disabled: (!have_states), readonly: true
+    = form.hidden_field :state_id
 
   .col-md-4.form-group
-    = form.label :country_id, with_required_mark(t(:country))
-    select id=(country_field_id) name="#{form.object_name}[country_id]" class="form-control form-control-md selectbox" readonly
-      - available_countries_for_current_zone.each do |country|
-        option selected=(address.country_id == country.id) value=(country.id) data-states-required=(country.states_required ? 'required' : nil)
-          = country.name
+    = form.label :country_name, with_required_mark(t(:country))
+    = text_field_tag "#{form.object_name}[country_id]", form.object.country.name,
+                     class: 'required form-control form-control-md',
+                     required: 'required', readonly: true
+    = form.hidden_field :country_id
 
 .row
   .col-md-6.form-group
