--- a/app/views/checkout/v1/spree/checkout/_masterpass_step.html.slim
+++ b/app/views/checkout/v1/spree/checkout/_masterpass_step.html.slim
@@ -3,7 +3,7 @@
 
   = hidden_field_tag :create_account, :value => true
 
-  h2.checkout-section-title Billing Address Details
+  h2.checkout-section-title Your information
   .form-wrapper data-hook='billing'
     = form.fields_for :bill_address do |bill_form|
       = render partial: 'masterpass_address', locals: {form: bill_form, address_type: 'billing', address: @order.bill_address}
