Add full-top to tag line

--- a/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
+++ b/app/views/layouts/redesign/header/gray_top_banner/_base.html.slim
@@ -42,7 +42,7 @@ ruby:
   a.h-logo-wrap href='/'
     .logo
       = image_tag 'logo/new-logo.svg'
-      .tagline Bespoke Fashion. Premium Style. Made for You
+      .tagline Bespoke Fashion. Premium Style. Made for You.
 
 .row#home-menu.hidden-xs.hidden-sm.text-center
   span.new-this-week
