--- a/app/views/layouts/redesign/_notices.html.slim
+++ b/app/views/layouts/redesign/_notices.html.slim
@@ -9,11 +9,9 @@
 
 
   / TODO - Refactor how we apply email reminders
-  - if automatic_discount_code.present? && session[:email_reminder_promo] != 'scheduled_for_delivery'
-    .auto-discount-applied
-      .text-center
-        p WANT TO SHOP LATER?
-        = link_to 'Email your promo code', fb_auth_path(email_reminder_promo: automatic_discount_code), class: 'btn btn-facebook btn-md'
-  /  .banner-top#promoSent
-  /    center
-  /      | Your promo code has been sent to the email attached to your Facebook account. <b>ENJOY!</b>
+  - if Features.active?(:send_promotion_email_reminder)
+    - if automatic_discount_code.present? && session[:email_reminder_promo] != 'scheduled_for_delivery'
+      .auto-discount-applied
+        .text-center
+          p WANT TO SHOP LATER?
+          = link_to 'Email your promo code', fb_auth_path(email_reminder_promo: automatic_discount_code), class: 'btn btn-facebook btn-md'
