restyled lookbook mobile menu, removed duplucated images

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -197,15 +197,25 @@ ruby:
               .arrow
                 i.fa.fa-chevron-left
                 .back BACK
-            li.images-content
-              .row
+            li.manu-content
                 a href='/lookbook/make-a-statement'
-                  = image_tag 'mobile-sidebar/lookbook/1.jpg'
+                  .heading
+                    .inner-wrap
+                      span bambi x fame.
+                  .media-wrap
+                    = image_tag 'homepage/lookbook/1.jpg'
                 a href='/lookbook/the-luxe-collection'
-                  = image_tag 'mobile-sidebar/lookbook/2.png'
-              .row
+                  .heading.alt
+                    .inner-wrap
+                      span the luxe collection
+                  .media-wrap
+                    = image_tag 'homepage/lookbook/2.jpg'
                 a href='/lookbook/here-comes-the-sun'
-                  = image_tag 'mobile-sidebar/lookbook/3.png'
+                  .heading.alt
+                    .inner-wrap
+                      span here comes the sun
+                  .media-wrap
+                    = image_tag 'homepage/lookbook/3.jpg'
 
         div#magazine-menu
           ul.nav.navbar-nav
