--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -989,9 +989,6 @@ li#cart-trigger {
         width: 90% !important;
       }
     }
-    #lookbook-menu ul{
-      margin-left: 5px;
-    }
     #new-this-week-menu{
       .text{
         width: 89% !important;
@@ -1047,9 +1044,6 @@ li#cart-trigger {
       .text{
         width: 90% !important;
       }
-    }
-    #lookbook-menu ul{
-      margin-left: 5px;
     }
   }
 
@@ -1192,6 +1186,46 @@ li#cart-trigger {
       padding: 0;
     }
   }
+
+  .manu-content {
+    padding: 0 10px;
+
+    > a {
+      display: block;
+      float: left;
+      width: 50%;
+      padding: 0;
+    }
+
+    .heading {
+      text-align: center;
+      text-transform: uppercase;
+      font-size: 1.2rem;
+      letter-spacing: 0.1em;
+      line-height: normal;
+      color: $c-neutral-white;
+      background: $c-neutral-black;
+
+      .inner-wrap {
+        display: table;
+        width: 100%;
+        height: 55px;
+        padding: 0 20px;
+      }
+
+      span {
+        display: table-cell;
+        vertical-align: middle;
+      }
+
+      &.alt {
+        background: $c-brand-blue;
+      }
+
+    }
+
+  }
+
 }
 
 .mobileAnimation{
